# workbench-cli

./: .gitignore  CHANGELOG.md  PACKAGING.md  components.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.build.json  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts  workbench-snapshot.md
.playwright-mcp/: page-2026-05-28T14-58-42-651Z.yml
cli/: args.test.ts  args.ts  index.ts  mkcert-prompt.test.ts  mkcert-prompt.ts  network-config.ts  (+2 more)
server-rs/: Cargo.toml  README.md
server-rs/src/: app_state.rs  assets.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs  server.rs  types.rs
server-rs/src/agents/: adapters.rs  handle_command.rs  match.rs  mod.rs  types.rs
server-rs/src/api/: auth.rs  health.rs  keybindings.rs  middleware.rs  mod.rs  settings.rs  workspace.rs
server-rs/src/auth/: invite.rs  local.rs  mod.rs  session.rs  token.rs
server-rs/src/db/: data_dir.rs  migrate.rs  mod.rs
server-rs/src/git/: actions.rs  commit.rs  diff.rs  exec.rs  mod.rs  status.rs  worktree_create.rs  worktree_list.rs
server-rs/src/keybindings/: mod.rs  store.rs
server-rs/src/settings/: lan.rs  mod.rs  network.rs  network_config.rs  network_settings.rs  store.rs  terminal_settings.rs
server-rs/src/terminal/: handler.rs  mod.rs  osc_parser.rs  pty.rs  pty_registry.rs  ring_buffer.rs  scrollback_persist.rs  shell_integration.rs
server-rs/src/transport/: mod.rs  tls.rs
server-rs/src/workspace/: drop_assets.rs  files.rs  git_panel.rs  mod.rs  path_guard.rs  pick_folder.rs  projects.rs  terminals.rs  worktrees.rs
(+514 files in other folders)
