[package]
name = "workbench-cli"
version = "0.1.0"
edition = "2021"
description = "Native Rust server for workbench-cli (parallel to server/ Hono app)"
default-run = "workbench-cli"

[lib]
name = "workbench_cli"
path = "src/lib.rs"

[[bin]]
name = "workbench-cli"
path = "src/main.rs"

[features]
default = []
embed-assets = ["dep:rust-embed"]

[dependencies]
axum = { version = "0.8", features = ["ws", "multipart"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"
futures = "0.3"
futures-util = "0.3"
md-5 = "0.10"
mime_guess = "2"
parking_lot = "0.12"
portable-pty = "0.9"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
rust-embed = { version = "8", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal", "fs", "process", "sync", "time"] }
tokio-tungstenite = "0.26"
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
